testdata/baselines/reference/submodule/compiler/jsFileClassPropertyInitalizationInObjectLiteral.errors.txt
foo.js(4,10): error TS2339: Property 'b' does not exist on type 'typeof A'.


==== foo.js (1 errors) ====
    module.exports = function () {
      class A { }
      return {
        c: A.b = 1,
             ~
!!! error TS2339: Property 'b' does not exist on type 'typeof A'.
      }
    };
    